ios fix for dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  color-scheme: light;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -7,6 +11,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: #f4f6f8;
   color: #111827;
+  -webkit-text-fill-color: #111827;
+  /* fixes iOS weird text bug */
 }
 
 button,
@@ -760,4 +766,8 @@ button {
     width: 100%;
     min-width: 0;
   }
+}
+
+* {
+  -webkit-text-fill-color: inherit;
 }
